...
    let home = Panel(title: .localized(.home),
                     image: UIImage(named: StandardImageIdentifiers.Large.home),
                     tag: 0)
    let newTab = Panel(title: .LegacyAppMenu.NewTab,
                       image: UIImage(named: StandardImageIdentifiers.Large.plus),
                       tag: 1)
    let share = Panel(title: .LegacyAppMenu.Share,
                      image: UIImage(named: StandardImageIdentifiers.Large.share),
                      tag: 2)
    let settings = Panel(title: .LegacyAppMenu.AppMenuSettingsTitleString,
                         image: UIImage(named: StandardImageIdentifiers.Large.settings),
                         tag: 3)

...
