...

    private lazy var searchView: UIView = {
        let view = UIView()
        view.layer.cornerRadius = (UX.barHeight - 2*UX.searchViewTopBottomSpacing)/2
        return view
    }()
    private lazy var searchTextField: UITextField = {
        let textField = UITextField()
        textField.addTarget(self, action: #selector(didTextChange), for: .editingChanged)
        textField.font = .preferredFont(forTextStyle: .body)
        textField.autocapitalizationType = .none
        textField.autocorrectionType = .no
        textField.inputAssistantItem.leadingBarButtonGroups = []
...
