...
"FirefoxHome.PrivacyNotice.PrivacyNoticeLink.v148" = "Privacy Notice";

/* The title for the Firefox homepage, only used to denote the name of the destination screen in the system back navigation button long-press menu */
"FirefoxHome.ScreenTitle.v144" = "Homepage";

/* This is the label, combined with a newspaper icon and a ^ chevron, used to show affordance that scrolling the homepage up reveals the News section containing a collection of trending news articles */
"FirefoxHome.Stories.NewsAffordanceLabel.v149" = "News";

/* This is the title of the stories section on Firefox Homepage, which displays a collection of trending news articles */
"FirefoxHome.Stories.NewsSectionTitle.v149" = "News";

/* When the user ends their private session, they are returned to the private mode homepage, and a toastbar popups confirming that their data has been erased. This is the label for that toast. */
"FirefoxHomepage.FeltDeletion.Link.v122" = "Private Browsing Data Erased";
...
